# 2023-physics-project

./: .gitattributes  .gitignore
3d-models/blender/: our-blend-v01.blend  our-blend-v01.blend1  our-blend-v01.mtl  rattleback-our.fbx
3d-models/solids-freecad/: rattleback-solid-v001.FCStd
freecad-export-tensors/: extract-tensors.py  run.sh
physics-viewer/: CMakeLists.txt  imgui.ini  main.cpp  ndBaseEntity.cpp  ndBaseEntity.h  ndBaseEntityNotify.cpp  ndBaseEntityNotify.h  ndBasicGyroTorque.cpp  ndBasicLab.cpp  ndCommon.cpp  ndCommon.h  ndContactCallback.cpp  ndContactCallback.h  ndDemoDebrisEntity.cpp  ndDemoDebrisEntity.h  ndDemoDebugMesh.cpp  ndDemoDebugMesh.h  ndDemoInstanceEntity.cpp  ndDemoInstanceEntity.h  ndDemoMesh.cpp  ndDemoMesh.h  ndDemoMeshInterface.cpp  ndDemoMeshInterface.h  ndDemoSkinMesh.cpp  ndDemoSkinMesh.h  ndDemoSplinePathMesh.cpp  ndDemoSplinePathMesh.h  ndLabCamera.cpp  ndLabCamera.h  ndLabCameraManager.cpp  ndLabCameraManager.h  ndPhysicsViewer.cpp  ndPhysicsViewer.h  ndPhysicsWorld.cpp  ndPhysicsWorld.h
physics-viewer/animation/: ndAnimationBlendTreeNode.cpp  ndAnimationBlendTreeNode.h  ndAnimationKeyframesTrack.cpp  ndAnimationKeyframesTrack.h  ndAnimationPose.cpp  ndAnimationPose.h  ndAnimationSequence.cpp  ndAnimationSequence.h  ndAnimationSequenceBase.cpp  ndAnimationSequenceBase.h  ndAnimationSequencePlayer.cpp  ndAnimationSequencePlayer.h  ndAnimationTwoWayBlend.cpp  ndAnimationTwoWayBlend.h
physics-viewer/media/: NewtonSky0001.tga  NewtonSky0002.tga  NewtonSky0003.tga  NewtonSky0004.tga  NewtonSky0005.tga  NewtonSky0006.tga  camo.tga  floorTile.tga  grids.tga  icon.tga  marble.tga  marbleCheckBoard.tga  tiles.tga
physics-viewer/toolbox/: ndCompoundScene.cpp  ndCompoundScene.h  ndDebugDisplay.cpp  ndDebugDisplay.h  ndExplodeConvexShapeModel.cpp  ndExplodeConvexShapeModel.h  ndFileBrowser.cpp  ndHeightFieldPrimitive.cpp  ndHeightFieldPrimitive.h  ndHighResolutionTimer.cpp  ndHighResolutionTimer.h  ndLeakTracker.cpp  ndLeakTracker.h  ndLoadFbxMesh.cpp  ndLoadFbxMesh.h  ndMakeProceduralStaticMap.cpp  ndMakeProceduralStaticMap.h  ndMakeStaticMap.cpp  ndMakeStaticMap.h  ndOpenGlUtil.cpp  ndOpenGlUtil.h  ndPhysicsUtils.cpp  ndPhysicsUtils.h  ndShaderCache.cpp  ndShaderCache.h  ndSkyBox.cpp  ndSkyBox.h  ndTargaToOpenGl.cpp  ndTargaToOpenGl.h  ndUIEntity.cpp  ndUIEntity.h
pydy-modelling/: .02-orientation.ipynb.sage-jupyter2  02-orientation.ipynb  03-vectors.ipynb  04-differentiation.ipynb  05-angular.ipynb  10-mass.ipynb  11-loads.ipynb  33-visualization.ipynb  Pipfile  install-env.sh  keplers.ipynb  pq-problems.ipynb  rattleback-tensors.ipynb  requirements.txt  showinlab.sh  showinnb.sh  wtf.ipynb
pydy-modelling/voxels/: our-blend-v01_75x47x395.txt  rattleback_174x16x32.txt
report/: 01-introduction.md  02-researches.md  04-tensor-from-paraboloid-jupyter.md  04-tensors-jupyter.md  05-get-info-from-d3-models.md  06-pydy-simulation.md  07-physics-viewer.md  10-conclusion.md  2023-physics-artur-report.html  build.sh
